@@ -1,13 +1,31 @@
 # -*- coding: utf-8 -*-
+from collections import defaultdict
+
+from django.template import Template
+
 from cms import api
 from cms.cms_plugins import AliasPlugin
-from cms.models import Placeholder, AliasPluginModel
+from cms.models import Page, Placeholder, AliasPluginModel
+from cms.test_utils.project.placeholderapp.models import Example1
 from cms.test_utils.testcases import CMSTestCase
+from cms.toolbar.toolbar import CMSToolbar
 from cms.utils.urlutils import admin_reverse
-from django.template import Template
+
+from sekizai.data import UniqueSequence
+from sekizai.helpers import get_varname
 
 
 class AliasTestCase(CMSTestCase):
+
+    def _get_example_obj(self):
+        obj = Example1.objects.create(
+            char_1='one',
+            char_2='two',
+            char_3='tree',
+            char_4='four'
+        )
+        return obj
+
     def test_add_plugin_alias(self):
         page_en = api.create_page("PluginOrderPage", "col_two.html", "en",
                                   slug="page1", published=True, in_navigation=True)
@@ -52,6 +70,147 @@ class AliasTestCase(CMSTestCase):
             response = self.client.get(page_en.get_absolute_url() + '?edit')
             self.assertEqual(response.status_code, 200)
             self.assertContains(response, '<div class="info">', html=True)
+
+    def test_alias_placeholder_is_not_editable(self):
+        """
+        When a placeholder is aliased, it shouldn't render as editable
+        in the structure mode.
+        """
+        source_page = api.create_page(
+            "Home",
+            "col_two.html",
+            "en",
+            published=True,
+            in_navigation=True,
+        )
+        source_placeholder = source_page.placeholders.get(slot="col_left")
+
+        style = api.add_plugin(
+            source_placeholder,
+            'StylePlugin',
+            'en',
+            tag_type='div',
+            class_name='info',
+        )
+
+        target_page = api.create_page(
+            "Target",
+            "col_two.html",
+            "en",
+            published=True,
+            in_navigation=True,
+        )
+        target_placeholder = target_page.placeholders.get(slot="col_left")
+        alias = api.add_plugin(
+            target_placeholder,
+            'AliasPlugin',
+            'en',
+            alias_placeholder=source_placeholder,
+        )
+
+        with self.login_user_context(self.get_superuser()):
+            context = self.get_context(path=target_page.get_absolute_url(), page=target_page)
+            context['request'].toolbar = CMSToolbar(context['request'])
+            context['request'].toolbar.edit_mode = True
+            context[get_varname()] = defaultdict(UniqueSequence)
+
+            content_renderer = context['cms_content_renderer']
+
+            output = content_renderer.render_placeholder(
+                target_placeholder,
+                context=context,
+                language='en',
+                page=target_page,
+                editable=True
+            )
+
+            tag_format = '<template class="cms-plugin cms-plugin-start cms-plugin-{}">'
+
+            expected_plugins = [alias]
+            unexpected_plugins = [style]
+
+            for plugin in expected_plugins:
+                start_tag = tag_format.format(plugin.pk)
+                self.assertIn(start_tag, output)
+
+            for plugin in unexpected_plugins:
+                start_tag = tag_format.format(plugin.pk)
+                self.assertNotIn(start_tag, output)
+
+            editable_placeholders = content_renderer.get_rendered_editable_placeholders()
+            self.assertNotIn(source_placeholder,editable_placeholders)
+
+    def test_alias_from_page_change_form_text(self):
+        superuser = self.get_superuser()
+        api.create_page(
+            "Home",
+            "col_two.html",
+            "en",
+            published=True,
+            in_navigation=True,
+        )
+        source_page = api.create_page(
+            "Source",
+            "col_two.html",
+            "en",
+            published=True,
+            in_navigation=True,
+        )
+        source_placeholder = source_page.placeholders.get(slot="col_left")
+
+        api.add_plugin(
+            source_placeholder,
+            'StylePlugin',
+            'en',
+            tag_type='div',
+            class_name='info',
+        )
+
+        target_page = api.create_page(
+            "Target",
+            "col_two.html",
+            "en",
+            published=True,
+            in_navigation=True,
+        )
+        target_placeholder = target_page.placeholders.get(slot="col_left")
+        alias = api.add_plugin(
+            target_placeholder,
+            'AliasPlugin',
+            'en',
+            alias_placeholder=source_placeholder,
+        )
+
+        endpoint = self.get_admin_url(Page, 'edit_plugin', alias.pk)
+
+        with self.login_user_context(superuser):
+            response = self.client.get(endpoint)
+            self.assertEqual(response.status_code, 200)
+            expected = ('This is an alias reference, you can edit the '
+                        'content only on the <a href="/en/source/?edit" '
+                        'target="_parent">Source</a> page.')
+            self.assertContains(response, expected)
+
+    def test_alias_from_generic_change_form_text(self):
+        superuser = self.get_superuser()
+
+        source_placeholder = self._get_example_obj().placeholder
+        target_placeholder = self._get_example_obj().placeholder
+
+        alias = api.add_plugin(
+            target_placeholder,
+            'AliasPlugin',
+            'en',
+            alias_placeholder=source_placeholder,
+        )
+
+        endpoint = self.get_admin_url(Example1, 'edit_plugin', alias.pk)
+
+        with self.login_user_context(superuser):
+            response = self.client.get(endpoint)
+            self.assertEqual(response.status_code, 200)
+            expected = 'There are no further settings for this plugin. Please press save.'
+            self.assertContains(response, expected)
 
     def test_move_and_delete_plugin_alias(self):
         '''
